--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "swig": "^1.4.2"
   },
   "devDependencies": {
     "marked": "^0.3.5"
