--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "request": "2.64.0"
   },
   "devDependencies": {
     "marked": "^0.3.5"
