--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "swig": "^1.4.2",
-    "request": "2.64.0"
+    "request": "2.64.0",
+    "sync-request": "2.1.0"
   },
   "devDependencies": {
     "marked": "^0.3.5"
